[gd_scene load_steps=3 format=2]

[ext_resource path="res://UIMain/TabList/TabList.tscn" type="PackedScene" id=1]
[ext_resource path="res://UIMain/TabList/InfoList.gd" type="Script" id=2]

[node name="InfoList" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Tab1" parent="Tabs" index="0"]
margin_top = 34.0

[node name="Tab2" parent="Tabs" index="1"]
margin_top = 34.0

[node name="Tab3" parent="Tabs" index="2"]
margin_top = 34.0

[node name="Tab4" parent="Tabs" index="3"]
margin_top = 34.0
